--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "~13.2.1",
     "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.0",
+    "@ngx-env/builder": "^2.0.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
